V1.8.1 * support for deflate64 compressed zip files